feat: support generating IDEA run configuration